# Screen-Light

./: Cargo.toml  LICENSE  README.md  build.rs  config.rs  main.rs
src/: auto_start.rs  monitors.rs  tray.rs
