[package]
name = "screen-light"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Devices_Display",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
]